// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grid from { width: 4, height: 7, rooms: 6 } can be displayed in the cli 1`] = `
"+---+---+---+---+
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m |
+   +---+---+---+
| [91m3[39m | [96m0[39m   [96m0[39m | [95m1[39m |
+---+---+   +   +
| [96m0[39m | [35m4[39m | [96m0[39m | [95m1[39m |
+   +   +---+   +
| [96m0[39m | [35m4[39m | [31m5[39m | [95m1[39m |
+---+   +   +   +
| [95m1[39m | [35m4[39m | [31m5[39m | [95m1[39m |
+   +---+   +---+
| [95m1[39m | [31m5[39m   [31m5[39m   [31m5[39m |
+---+---+---+---+
| [92m2[39m   [92m2[39m   [92m2[39m | [35m4[39m |
+---+---+---+---+

room 0 size=5 cells=5,6,8,10,12
room 1 size=6 cells=7,11,15,16,19,20
room 2 size=3 cells=24,25,26
room 3 size=5 cells=0,1,2,3,4
room 4 size=4 cells=9,13,17,27
room 5 size=5 cells=14,18,21,22,23"
`;

exports[`grid from { width: 4, height: 7, rooms: 6 } can be displayed in the cli 2`] = `
"+---+---+---+---+
| 3   3   3   3 |
+   +---+---+---+
| 3 | 0   0 | 1 |
+---+---+   +   +
| 0 | 4 | 0 | 1 |
+   +   +---+   +
| 0 | 4 | 5 | 1 |
+---+   +   +   +
| 1 | 4 | 5 | 1 |
+   +---+   +---+
| 1 | 5   5   5 |
+---+---+---+---+
| 2   2   2 | 4 |
+---+---+---+---+

room 0 size=5 cells=5,6,8,10,12
room 1 size=6 cells=7,11,15,16,19,20
room 2 size=3 cells=24,25,26
room 3 size=5 cells=0,1,2,3,4
room 4 size=4 cells=9,13,17,27
room 5 size=5 cells=14,18,21,22,23"
`;

exports[`grid from { width: 5, height: 5, rooms: 2 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+   +   +   +   +---+
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [96m0[39m |
+---+   +   +   +   +
| [96m0[39m | [95m1[39m   [95m1[39m   [95m1[39m | [96m0[39m |
+   +   +---+---+   +
| [96m0[39m | [95m1[39m | [96m0[39m   [96m0[39m   [96m0[39m |
+   +---+   +   +   +
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+---+---+---+---+---+

room 0 size=12 cells=9,10,14,15,17,18,19,20,21,22,23,24
room 1 size=13 cells=0,1,2,3,4,5,6,7,8,11,12,13,16"
`;

exports[`grid from { width: 5, height: 5, rooms: 2 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+
| 1   1   1   1   1 |
+   +   +   +   +---+
| 1   1   1   1 | 0 |
+---+   +   +   +   +
| 0 | 1   1   1 | 0 |
+   +   +---+---+   +
| 0 | 1 | 0   0   0 |
+   +---+   +   +   +
| 0   0   0   0   0 |
+---+---+---+---+---+

room 0 size=12 cells=9,10,14,15,17,18,19,20,21,22,23,24
room 1 size=13 cells=0,1,2,3,4,5,6,7,8,11,12,13,16"
`;

exports[`grid from { width: 5, height: 5, rooms: 3 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+   +   +   +   +---+
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [96m0[39m |
+---+---+---+---+   +
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [96m0[39m |
+---+---+---+   +   +
| [96m0[39m   [96m0[39m   [96m0[39m | [95m1[39m | [96m0[39m |
+   +---+---+   +---+
| [96m0[39m | [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+---+---+---+---+---+

room 0 size=7 cells=9,14,15,16,17,19,20
room 1 size=9 cells=10,11,12,13,18,21,22,23,24
room 2 size=9 cells=0,1,2,3,4,5,6,7,8"
`;

exports[`grid from { width: 5, height: 5, rooms: 3 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+
| 2   2   2   2   2 |
+   +   +   +   +---+
| 2   2   2   2 | 0 |
+---+---+---+---+   +
| 1   1   1   1 | 0 |
+---+---+---+   +   +
| 0   0   0 | 1 | 0 |
+   +---+---+   +---+
| 0 | 1   1   1   1 |
+---+---+---+---+---+

room 0 size=7 cells=9,14,15,16,17,19,20
room 1 size=9 cells=10,11,12,13,18,21,22,23,24
room 2 size=9 cells=0,1,2,3,4,5,6,7,8"
`;

exports[`grid from { width: 5, height: 5, rooms: 4 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+
| [95m1[39m   [95m1[39m   [95m1[39m | [91m3[39m   [91m3[39m |
+   +   +---+   +   +
| [95m1[39m   [95m1[39m | [96m0[39m | [91m3[39m   [91m3[39m |
+---+---+   +---+---+
| [91m3[39m   [91m3[39m | [96m0[39m   [96m0[39m   [96m0[39m |
+---+---+   +   +---+
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m | [92m2[39m |
+---+---+---+---+   +
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+---+---+---+---+---+

room 0 size=8 cells=7,12,13,14,15,16,17,18
room 1 size=5 cells=0,1,2,5,6
room 2 size=6 cells=19,20,21,22,23,24
room 3 size=6 cells=3,4,8,9,10,11"
`;

exports[`grid from { width: 5, height: 5, rooms: 4 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+
| 1   1   1 | 3   3 |
+   +   +---+   +   +
| 1   1 | 0 | 3   3 |
+---+---+   +---+---+
| 3   3 | 0   0   0 |
+---+---+   +   +---+
| 0   0   0   0 | 2 |
+---+---+---+---+   +
| 2   2   2   2   2 |
+---+---+---+---+---+

room 0 size=8 cells=7,12,13,14,15,16,17,18
room 1 size=5 cells=0,1,2,5,6
room 2 size=6 cells=19,20,21,22,23,24
room 3 size=6 cells=3,4,8,9,10,11"
`;

exports[`grid from { width: 12, height: 12, rooms: 4 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+   +   +   +   +   +   +   +   +   +   +   +   +
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+   +   +   +---+   +---+   +   +   +   +   +   +
| [96m0[39m   [96m0[39m   [96m0[39m | [92m2[39m | [96m0[39m | [95m1[39m | [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+---+---+   +   +   +---+---+---+---+---+---+---+
| [91m3[39m | [95m1[39m | [96m0[39m | [92m2[39m | [96m0[39m | [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [92m2[39m   [92m2[39m   [92m2[39m |
+   +   +---+   +---+   +   +   +   +   +   +---+
| [91m3[39m | [95m1[39m   [95m1[39m | [92m2[39m   [92m2[39m | [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [92m2[39m   [92m2[39m | [95m1[39m |
+   +   +   +   +   +   +   +   +   +   +---+   +
| [91m3[39m | [95m1[39m   [95m1[39m | [92m2[39m   [92m2[39m | [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [92m2[39m | [95m1[39m   [95m1[39m |
+   +   +---+   +   +   +   +   +   +---+   +   +
| [91m3[39m | [95m1[39m | [92m2[39m   [92m2[39m   [92m2[39m | [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [95m1[39m   [95m1[39m |
+   +   +   +   +   +   +   +   +   +   +   +   +
| [91m3[39m | [95m1[39m | [92m2[39m   [92m2[39m   [92m2[39m | [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [95m1[39m   [95m1[39m |
+   +   +   +   +   +   +   +   +   +   +---+   +
| [91m3[39m | [95m1[39m | [92m2[39m   [92m2[39m   [92m2[39m | [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [92m2[39m | [95m1[39m |
+   +   +   +   +---+---+---+---+---+---+---+   +
| [91m3[39m | [95m1[39m | [92m2[39m   [92m2[39m | [91m3[39m | [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+---+---+---+   +---+   +   +   +---+   +   +   +
| [95m1[39m | [92m2[39m | [95m1[39m | [92m2[39m   [92m2[39m | [95m1[39m   [95m1[39m   [95m1[39m | [92m2[39m | [95m1[39m   [95m1[39m   [95m1[39m |
+   +   +   +---+   +   +---+---+   +---+---+---+
| [95m1[39m | [92m2[39m | [95m1[39m   [95m1[39m | [92m2[39m | [95m1[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=36 cells=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,28,30,31,32,33,34,35,38,40
room 1 size=37 cells=29,37,49,50,59,61,62,70,71,73,82,83,85,94,95,97,107,109,113,114,115,116,117,118,119,120,122,125,126,127,129,130,131,132,134,135,137
room 2 size=36 cells=27,39,45,46,47,51,52,57,58,63,64,69,74,75,76,86,87,88,98,99,100,106,110,111,121,123,124,128,133,136,138,139,140,141,142,143
room 3 size=35 cells=36,41,42,43,44,48,53,54,55,56,60,65,66,67,68,72,77,78,79,80,81,84,89,90,91,92,93,96,101,102,103,104,105,108,112"
`;

exports[`grid from { width: 12, height: 12, rooms: 4 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| 0   0   0   0   0   0   0   0   0   0   0   0 |
+   +   +   +   +   +   +   +   +   +   +   +   +
| 0   0   0   0   0   0   0   0   0   0   0   0 |
+   +   +   +---+   +---+   +   +   +   +   +   +
| 0   0   0 | 2 | 0 | 1 | 0   0   0   0   0   0 |
+---+---+   +   +   +---+---+---+---+---+---+---+
| 3 | 1 | 0 | 2 | 0 | 3   3   3   3 | 2   2   2 |
+   +   +---+   +---+   +   +   +   +   +   +---+
| 3 | 1   1 | 2   2 | 3   3   3   3 | 2   2 | 1 |
+   +   +   +   +   +   +   +   +   +   +---+   +
| 3 | 1   1 | 2   2 | 3   3   3   3 | 2 | 1   1 |
+   +   +---+   +   +   +   +   +   +---+   +   +
| 3 | 1 | 2   2   2 | 3   3   3   3   3 | 1   1 |
+   +   +   +   +   +   +   +   +   +   +   +   +
| 3 | 1 | 2   2   2 | 3   3   3   3   3 | 1   1 |
+   +   +   +   +   +   +   +   +   +   +---+   +
| 3 | 1 | 2   2   2 | 3   3   3   3   3 | 2 | 1 |
+   +   +   +   +---+---+---+---+---+---+---+   +
| 3 | 1 | 2   2 | 3 | 1   1   1   1   1   1   1 |
+---+---+---+   +---+   +   +   +---+   +   +   +
| 1 | 2 | 1 | 2   2 | 1   1   1 | 2 | 1   1   1 |
+   +   +   +---+   +   +---+---+   +---+---+---+
| 1 | 2 | 1   1 | 2 | 1 | 2   2   2   2   2   2 |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=36 cells=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,28,30,31,32,33,34,35,38,40
room 1 size=37 cells=29,37,49,50,59,61,62,70,71,73,82,83,85,94,95,97,107,109,113,114,115,116,117,118,119,120,122,125,126,127,129,130,131,132,134,135,137
room 2 size=36 cells=27,39,45,46,47,51,52,57,58,63,64,69,74,75,76,86,87,88,98,99,100,106,110,111,121,123,124,128,133,136,138,139,140,141,142,143
room 3 size=35 cells=36,41,42,43,44,48,53,54,55,56,60,65,66,67,68,72,77,78,79,80,81,84,89,90,91,92,93,96,101,102,103,104,105,108,112"
`;

exports[`grid from { width: 12, height: 12, rooms: 8 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| [96m0[39m | [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m | [96m0[39m | [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+   +   +   +---+---+---+   +   +   +   +   +   +
| [96m0[39m | [35m4[39m   [35m4[39m | [31m5[39m | [96m0[39m | [34m7[39m | [35m4[39m | [96m0[39m | [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+   +   +   +   +---+   +---+   +---+   +   +   +
| [96m0[39m | [35m4[39m   [35m4[39m | [31m5[39m | [91m3[39m | [34m7[39m | [95m1[39m | [96m0[39m | [31m5[39m | [95m1[39m   [95m1[39m   [95m1[39m |
+   +   +---+---+   +   +---+---+   +   +   +   +
| [96m0[39m | [35m4[39m | [31m5[39m | [35m4[39m | [91m3[39m | [34m7[39m | [92m2[39m | [91m3[39m | [31m5[39m | [95m1[39m   [95m1[39m   [95m1[39m |
+   +---+   +   +   +   +---+   +   +---+   +   +
| [96m0[39m | [95m1[39m | [31m5[39m | [35m4[39m | [91m3[39m | [34m7[39m | [93m6[39m | [91m3[39m | [31m5[39m | [91m3[39m | [95m1[39m   [95m1[39m |
+   +   +   +   +   +   +   +   +   +   +   +---+
| [96m0[39m | [95m1[39m | [31m5[39m | [35m4[39m | [91m3[39m | [34m7[39m | [93m6[39m | [91m3[39m | [31m5[39m | [91m3[39m | [95m1[39m | [34m7[39m |
+   +---+   +   +   +   +   +---+---+   +---+   +
| [96m0[39m   [96m0[39m | [31m5[39m | [35m4[39m | [91m3[39m | [34m7[39m | [93m6[39m | [34m7[39m | [35m4[39m | [91m3[39m   [91m3[39m | [34m7[39m |
+---+   +---+---+   +   +---+   +---+---+   +---+
| [35m4[39m | [96m0[39m | [93m6[39m   [93m6[39m | [91m3[39m | [34m7[39m | [91m3[39m | [34m7[39m   [34m7[39m | [93m6[39m | [91m3[39m | [31m5[39m |
+---+   +   +   +---+---+   +   +   +   +   +   +
| [93m6[39m | [96m0[39m | [93m6[39m   [93m6[39m | [31m5[39m | [93m6[39m | [91m3[39m | [34m7[39m   [34m7[39m | [93m6[39m | [91m3[39m | [31m5[39m |
+---+   +   +   +   +   +---+---+   +---+---+   +
| [96m0[39m   [96m0[39m | [93m6[39m   [93m6[39m | [31m5[39m | [93m6[39m   [93m6[39m | [96m0[39m | [34m7[39m | [92m2[39m   [92m2[39m | [31m5[39m |
+---+---+   +   +   +---+---+---+---+   +   +   +
| [34m7[39m   [34m7[39m | [93m6[39m   [93m6[39m | [31m5[39m   [31m5[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [31m5[39m |
+---+---+---+---+---+---+   +   +   +   +   +---+
| [31m5[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=17 cells=0,7,12,16,19,24,31,36,48,60,72,73,85,97,108,109,115
room 1 size=20 cells=8,9,10,11,20,21,22,23,30,33,34,35,45,46,47,49,58,59,61,70
room 2 size=19 cells=42,117,118,126,127,128,129,130,133,134,135,136,137,138,139,140,141,142,143
room 3 size=17 cells=28,40,43,52,55,57,64,67,69,76,81,82,88,90,94,102,106
room 4 size=18 cells=1,2,3,4,5,6,13,14,18,25,26,37,39,51,63,75,80,84
room 5 size=19 cells=15,27,32,38,44,50,56,62,68,74,95,100,107,112,119,124,125,131,132
room 6 size=17 cells=54,66,78,86,87,93,96,98,99,101,105,110,111,113,114,122,123
room 7 size=17 cells=17,29,41,53,65,71,77,79,83,89,91,92,103,104,116,120,121"
`;

exports[`grid from { width: 12, height: 12, rooms: 8 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| 0 | 4   4   4   4   4   4 | 0 | 1   1   1   1 |
+   +   +   +---+---+---+   +   +   +   +   +   +
| 0 | 4   4 | 5 | 0 | 7 | 4 | 0 | 1   1   1   1 |
+   +   +   +   +---+   +---+   +---+   +   +   +
| 0 | 4   4 | 5 | 3 | 7 | 1 | 0 | 5 | 1   1   1 |
+   +   +---+---+   +   +---+---+   +   +   +   +
| 0 | 4 | 5 | 4 | 3 | 7 | 2 | 3 | 5 | 1   1   1 |
+   +---+   +   +   +   +---+   +   +---+   +   +
| 0 | 1 | 5 | 4 | 3 | 7 | 6 | 3 | 5 | 3 | 1   1 |
+   +   +   +   +   +   +   +   +   +   +   +---+
| 0 | 1 | 5 | 4 | 3 | 7 | 6 | 3 | 5 | 3 | 1 | 7 |
+   +---+   +   +   +   +   +---+---+   +---+   +
| 0   0 | 5 | 4 | 3 | 7 | 6 | 7 | 4 | 3   3 | 7 |
+---+   +---+---+   +   +---+   +---+---+   +---+
| 4 | 0 | 6   6 | 3 | 7 | 3 | 7   7 | 6 | 3 | 5 |
+---+   +   +   +---+---+   +   +   +   +   +   +
| 6 | 0 | 6   6 | 5 | 6 | 3 | 7   7 | 6 | 3 | 5 |
+---+   +   +   +   +   +---+---+   +---+---+   +
| 0   0 | 6   6 | 5 | 6   6 | 0 | 7 | 2   2 | 5 |
+---+---+   +   +   +---+---+---+---+   +   +   +
| 7   7 | 6   6 | 5   5 | 2   2   2   2   2 | 5 |
+---+---+---+---+---+---+   +   +   +   +   +---+
| 5 | 2   2   2   2   2   2   2   2   2   2   2 |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=17 cells=0,7,12,16,19,24,31,36,48,60,72,73,85,97,108,109,115
room 1 size=20 cells=8,9,10,11,20,21,22,23,30,33,34,35,45,46,47,49,58,59,61,70
room 2 size=19 cells=42,117,118,126,127,128,129,130,133,134,135,136,137,138,139,140,141,142,143
room 3 size=17 cells=28,40,43,52,55,57,64,67,69,76,81,82,88,90,94,102,106
room 4 size=18 cells=1,2,3,4,5,6,13,14,18,25,26,37,39,51,63,75,80,84
room 5 size=19 cells=15,27,32,38,44,50,56,62,68,74,95,100,107,112,119,124,125,131,132
room 6 size=17 cells=54,66,78,86,87,93,96,98,99,101,105,110,111,113,114,122,123
room 7 size=17 cells=17,29,41,53,65,71,77,79,83,89,91,92,103,104,116,120,121"
`;

exports[`grid from { width: 12, height: 12, rooms: 10 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| [91m3[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [35m4[39m   [35m4[39m   [35m4[39m | [96m0[39m   [96m0[39m |
+   +   +   +   +   +   +---+   +---+   +---+   +
| [91m3[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [93m6[39m | [35m4[39m | [32m8[39m | [35m4[39m | [31m5[39m | [96m0[39m |
+   +   +   +---+   +   +   +   +---+---+   +   +
| [91m3[39m | [92m2[39m   [92m2[39m | [95m1[39m | [92m2[39m   [92m2[39m | [93m6[39m | [35m4[39m | [96m0[39m | [94m9[39m | [31m5[39m | [96m0[39m |
+---+   +   +   +---+---+   +   +   +   +---+---+
| [95m1[39m | [92m2[39m   [92m2[39m | [95m1[39m   [95m1[39m   [95m1[39m | [93m6[39m | [35m4[39m | [96m0[39m | [94m9[39m | [35m4[39m | [91m3[39m |
+---+---+---+---+   +---+---+   +---+   +   +   +
| [91m3[39m   [91m3[39m | [32m8[39m | [96m0[39m | [95m1[39m | [93m6[39m | [35m4[39m   [35m4[39m | [94m9[39m   [94m9[39m | [35m4[39m | [91m3[39m |
+---+---+   +   +---+---+   +   +   +   +   +   +
| [31m5[39m   [31m5[39m | [32m8[39m | [96m0[39m   [96m0[39m | [34m7[39m | [35m4[39m   [35m4[39m | [94m9[39m   [94m9[39m | [35m4[39m | [91m3[39m |
+   +   +---+   +   +   +---+   +---+   +   +   +
| [31m5[39m   [31m5[39m | [34m7[39m | [96m0[39m   [96m0[39m | [34m7[39m | [96m0[39m | [35m4[39m | [32m8[39m | [94m9[39m | [35m4[39m | [91m3[39m |
+   +   +   +   +---+   +---+---+   +   +---+   +
| [31m5[39m   [31m5[39m | [34m7[39m | [96m0[39m | [32m8[39m | [34m7[39m   [34m7[39m   [34m7[39m | [32m8[39m | [94m9[39m   [94m9[39m | [91m3[39m |
+   +   +   +---+---+   +   +   +---+   +   +   +
| [31m5[39m   [31m5[39m | [34m7[39m | [91m3[39m | [31m5[39m | [34m7[39m   [34m7[39m   [34m7[39m | [94m9[39m   [94m9[39m   [94m9[39m | [91m3[39m |
+   +   +   +   +---+   +---+---+---+   +   +---+
| [31m5[39m   [31m5[39m | [34m7[39m | [91m3[39m | [95m1[39m | [34m7[39m | [32m8[39m   [32m8[39m | [95m1[39m | [94m9[39m   [94m9[39m | [93m6[39m |
+---+---+---+---+   +---+   +---+   +---+---+   +
| [94m9[39m | [93m6[39m   [93m6[39m   [93m6[39m | [95m1[39m   [95m1[39m | [32m8[39m | [94m9[39m | [95m1[39m   [95m1[39m   [95m1[39m | [93m6[39m |
+---+   +   +   +---+   +   +---+---+---+---+   +
| [95m1[39m | [93m6[39m   [93m6[39m   [93m6[39m | [32m8[39m | [95m1[39m | [32m8[39m   [32m8[39m   [32m8[39m   [32m8[39m   [32m8[39m | [93m6[39m |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=13 cells=10,11,23,32,35,44,51,63,64,75,76,78,87
room 1 size=15 cells=27,36,39,40,41,52,112,116,124,125,128,129,130,132,137
room 2 size=17 cells=1,2,3,4,5,6,13,14,15,16,17,25,26,28,29,37,38
room 3 size=13 cells=0,12,24,47,48,49,59,71,83,95,99,107,111
room 4 size=16 cells=7,8,9,19,21,31,43,46,54,55,58,66,67,70,79,82
room 5 size=13 cells=22,34,60,61,72,73,84,85,96,97,100,108,109
room 6 size=13 cells=18,30,42,53,119,121,122,123,131,133,134,135,143
room 7 size=13 cells=65,74,77,86,89,90,91,98,101,102,103,110,113
room 8 size=15 cells=20,50,62,80,88,92,114,115,126,136,138,139,140,141,142
room 9 size=16 cells=33,45,56,57,68,69,81,93,94,104,105,106,117,118,120,127"
`;

exports[`grid from { width: 12, height: 12, rooms: 10 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| 3 | 2   2   2   2   2   2 | 4   4   4 | 0   0 |
+   +   +   +   +   +   +---+   +---+   +---+   +
| 3 | 2   2   2   2   2 | 6 | 4 | 8 | 4 | 5 | 0 |
+   +   +   +---+   +   +   +   +---+---+   +   +
| 3 | 2   2 | 1 | 2   2 | 6 | 4 | 0 | 9 | 5 | 0 |
+---+   +   +   +---+---+   +   +   +   +---+---+
| 1 | 2   2 | 1   1   1 | 6 | 4 | 0 | 9 | 4 | 3 |
+---+---+---+---+   +---+---+   +---+   +   +   +
| 3   3 | 8 | 0 | 1 | 6 | 4   4 | 9   9 | 4 | 3 |
+---+---+   +   +---+---+   +   +   +   +   +   +
| 5   5 | 8 | 0   0 | 7 | 4   4 | 9   9 | 4 | 3 |
+   +   +---+   +   +   +---+   +---+   +   +   +
| 5   5 | 7 | 0   0 | 7 | 0 | 4 | 8 | 9 | 4 | 3 |
+   +   +   +   +---+   +---+---+   +   +---+   +
| 5   5 | 7 | 0 | 8 | 7   7   7 | 8 | 9   9 | 3 |
+   +   +   +---+---+   +   +   +---+   +   +   +
| 5   5 | 7 | 3 | 5 | 7   7   7 | 9   9   9 | 3 |
+   +   +   +   +---+   +---+---+---+   +   +---+
| 5   5 | 7 | 3 | 1 | 7 | 8   8 | 1 | 9   9 | 6 |
+---+---+---+---+   +---+   +---+   +---+---+   +
| 9 | 6   6   6 | 1   1 | 8 | 9 | 1   1   1 | 6 |
+---+   +   +   +---+   +   +---+---+---+---+   +
| 1 | 6   6   6 | 8 | 1 | 8   8   8   8   8 | 6 |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=13 cells=10,11,23,32,35,44,51,63,64,75,76,78,87
room 1 size=15 cells=27,36,39,40,41,52,112,116,124,125,128,129,130,132,137
room 2 size=17 cells=1,2,3,4,5,6,13,14,15,16,17,25,26,28,29,37,38
room 3 size=13 cells=0,12,24,47,48,49,59,71,83,95,99,107,111
room 4 size=16 cells=7,8,9,19,21,31,43,46,54,55,58,66,67,70,79,82
room 5 size=13 cells=22,34,60,61,72,73,84,85,96,97,100,108,109
room 6 size=13 cells=18,30,42,53,119,121,122,123,131,133,134,135,143
room 7 size=13 cells=65,74,77,86,89,90,91,98,101,102,103,110,113
room 8 size=15 cells=20,50,62,80,88,92,114,115,126,136,138,139,140,141,142
room 9 size=16 cells=33,45,56,57,68,69,81,93,94,104,105,106,117,118,120,127"
`;
